# cedarling_android_test

./: Cargo.toml  README.md  authzInputs.json  bootstrap.json  policy-store-_3.json  policy-store_1.json
rustandroid/: settings.gradle.kts
rustandroid/app/: build.gradle.kts
rustandroid/app/src/main/: AndroidManifest.xml
rustandroid/app/src/main/java/com/example/rust_android/: MainActivity.kt
rustandroid/app/src/main/java/com/example/rust_android/ui/theme/: Color.kt  Theme.kt  Type.kt
rustandroid/app/src/main/res/values/: themes.xml
rustandroid/gradle/wrapper/: gradle-wrapper.properties
src/: binding.udl  lib.rs
