[package]
name = "cedarling_android"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]
name = "mobile"
 
[dependencies]
uniffi = { version = "0.25.3", features = [ "cli" ] }
cedarling = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-pyobject = "0.4.0"
jsonwebtoken = "9.3.0"
openssl = { version = "0.10.35", features = ["vendored"] }
